VisualVM 135 localization for ja and zh_CN (contributed by masaki)
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3112 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/type/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/type/Bundle_ja.properties
@@ -26,6 +26,9 @@ OpenIDE-Module-Name=VisualVM - \u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\
 
 LBL_NbPlatformApplication=NetBeans \u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3
 
+LBL_Local_Application=\u30ed\u30fc\u30ab\u30eb\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3
+LBL_Remote_Application=\u30ea\u30e2\u30fc\u30c8\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3
+
 LBL_Unknown_Application=<\u4e0d\u660e\u306a\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3>
 
 LBL_Unknown_Version=<\u4e0d\u660e\u306a\u30d0\u30fc\u30b8\u30e7\u30f3>
@@ -42,6 +45,8 @@ DESCR_VisualVMApplicationType=VisualVM \u306f\u3001\u3044\u304f\u3064\u304b\u306
 DESCR_NetBeansBasedApplicationType=NetBeans \u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0\u4e0a\u306b\u69cb\u7bc9\u3055\u308c\u305f Java \u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3067\u3059\u3002
 DESCR_NetBeansApplicationType=NetBeans IDE: \u5fc5\u8981\u306a IDE \u306f\u3053\u308c 1 \u3064\u3060\u3051 !Windows\u3001Linux\u3001Mac OS X\u3001Solaris \u306b\u5bfe\u5fdc\u3057\u3066\u3044\u307e\u3059\u3002\u30aa\u30fc\u30d7\u30f3\u30bd\u30fc\u30b9\u3067\u7121\u511f\u306e NetBeans IDE \u3067\u3059\u3002
 DESCR_JDeveloperApplicationType=Oracle JDeveloper \u306f\u3001Java \u30d9\u30fc\u30b9\u306e SOA \u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u958b\u767a\u3092\u7c21\u7d20\u5316\u3059\u308b\u3001\u307e\u305f\u958b\u767a\u30e9\u30a4\u30d5\u30b5\u30a4\u30af\u30eb\u5168\u4f53\u3092\u30b5\u30dd\u30fc\u30c8\u3059\u308b\u30e6\u30fc\u30b6\u30fc\u30a4\u30f3\u30bf\u30d5\u30a7\u30fc\u30b9\u306e\u7121\u511f\u306e\u7dcf\u5408\u958b\u767a\u74b0\u5883\u3067\u3059\u3002
+DESCR_IntelliJPlatformApplicationType=IntelliJ Platform \u306f\u30b9\u30de\u30fc\u30c8\u3067\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u306e\u5305\u62ec\u7684\u306a\u30bb\u30c3\u30c8\u3092\u542b\u3080 IDE \u306e\u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0\u3067\u3059\u3002
+DESCR_EclipseApplicationType=Eclipse \u306f\u30aa\u30fc\u30d7\u30f3\u30bd\u30fc\u30b9\u30b3\u30df\u30e5\u30cb\u30c6\u30a3\u30fc\u3067\u30aa\u30fc\u30d7\u30f3\u306a\u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0\u3068\u88fd\u54c1\u3092\u958b\u767a\u3057\u3066\u3044\u307e\u3059\u3002
 DESCR_MavenApplicationType=Apache Maven \u306f\u3001\u30bd\u30d5\u30c8\u30a6\u30a7\u30a2\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u7ba1\u7406\u3001\u7406\u89e3\u3059\u308b\u305f\u3081\u306e\u30c4\u30fc\u30eb\u3067\u3059\u3002\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u30e2\u30c7\u30eb (POM) \u306e\u6982\u5ff5\u306b\u57fa\u3065\u304d\u3001Maven \u3067\u306f\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u69cb\u7bc9\u3001\u30ec\u30dd\u30fc\u30c8\u3001\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u4f5c\u6210\u3092\u4e00\u5143\u7ba1\u7406\u3067\u304d\u307e\u3059\u3002
 DESCR_Ant=Apache Ant \u306f\u3001Java \u30d9\u30fc\u30b9\u306e\u69cb\u7bc9\u30c4\u30fc\u30eb\u3067\u3059\u3002\u7406\u8ad6\u7684\u306b\u306f\u3001make \u306e\u6b20\u70b9\u306e\u306a\u3044 make \u306e\u4e00\u7a2e\u3067\u3059\u3002
 DESCR_GlassFish=GlassFish \u306f\u3001Java EE \u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0\u7528\u306e\u30aa\u30fc\u30d7\u30f3\u30bd\u30fc\u30b9\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u30b5\u30fc\u30d0\u30fc\u3067\u3059\u3002
