--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/welcome/resources/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-modules-appui/com-sun-tools-visualvm-modules-appui/com/sun/tools/visualvm/modules/appui/welcome/resources/Bundle_ja.properties
@@ -52,7 +52,7 @@ LBL_Link7=VisualVM \u306e\u62e1\u5f35\u5165\u9580
 URL_Link7=http://visualvm.java.net/api-quickstart.html
 
 LBL_Link8=Java SE 6 \u306e\u76e3\u8996\u304a\u3088\u3073\u7ba1\u7406
-URL_Link8=http://java.sun.com/developer/technicalArticles/J2SE/monitoring/
+URL_Link8=http://www.oracle.com/technetwork/articles/javase/monitoring-141801.html
 
 
 URL_OracleLogo=http://www.oracle.com/jp
