--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-profiling/com-sun-tools-visualvm-profiling/com/sun/tools/visualvm/profiling/snapshot/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-profiling/com-sun-tools-visualvm-profiling/com/sun/tools/visualvm/profiling/snapshot/Bundle_ja.properties
@@ -34,3 +34,5 @@ MSG_Opening_snapshot_failed=\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u30
 
 DESCR_ProfilerSnapshot=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306e\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u3002
 
+MSG_SnapshotLoadFailedMsg=\u30b9\u30ca\u30c3\u30d7\u30b7\u30e7\u30c3\u30c8\u8aad\u307f\u8fbc\u307f\u4e2d\u306b\u30a8\u30e9\u30fc: {0}
+
