--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-sampler/com-sun-tools-visualvm-sampler/com/sun/tools/visualvm/sampler/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-sampler/com-sun-tools-visualvm-sampler/com/sun/tools/visualvm/sampler/Bundle_ja.properties
@@ -82,6 +82,8 @@ MSG_No_save_data_memory=<html><b>\u4fdd\u5b58\u3059\u308b\u30c7\u30fc\u30bf\u304
 
 MSG_Thread_dump_unsupported=\u30b9\u30ec\u30c3\u30c9\u30c0\u30f3\u30d7\u306f\u30b5\u30dd\u30fc\u30c8\u3055\u308c\u3066\u3044\u307e\u305b\u3093
 
+MSG_ThreadCPU_unsupported=\u30b9\u30ec\u30c3\u30c9 CPU \u6642\u9593\u306f\u30b5\u30dd\u30fc\u30c8\u3055\u308c\u3066\u3044\u307e\u305b\u3093
+
 MSG_Available=\u4f7f\u7528\u53ef\u80fd\u3067\u3059\u3002
 
 MSG_Available_details=\u4f7f\u7528\u53ef\u80fd\u3067\u3059 ({0})\u3002
