--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/type/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-application/com-sun-tools-visualvm-application/com/sun/tools/visualvm/application/type/Bundle_zh_CN.properties
@@ -26,6 +26,9 @@ OpenIDE-Module-Name=VisualVM-ApplicationType
 
 LBL_NbPlatformApplication=NetBeans \u5e73\u53f0\u5e94\u7528\u7a0b\u5e8f
 
+LBL_Local_Application=\u672c\u5730\u5e94\u7528
+LBL_Remote_Application=\u8fdc\u7a0b\u5e94\u7528
+
 LBL_Unknown_Application=<\u672a\u77e5\u7684\u5e94\u7528\u7a0b\u5e8f>
 
 LBL_Unknown_Version=<\u672a\u77e5\u7684\u7248\u672c>
@@ -42,6 +45,8 @@ DESCR_VisualVMApplicationType=VisualVM \u662f\u4e00\u79cd\u53ef\u89c6\u5de5\u517
 DESCR_NetBeansBasedApplicationType=\u5728 NetBeans \u5e73\u53f0\u4e0a\u6784\u5efa\u7684 Java \u5e94\u7528\u7a0b\u5e8f\u3002
 DESCR_NetBeansApplicationType=NetBeans IDE\uff1a\u60a8\u6240\u9700\u7684\u552f\u4e00 IDE\uff01\u53ef\u4ee5\u5728 Windows\u3001Linux\u3001Mac OS X \u548c Solaris \u4e0a\u8fd0\u884c\u3002NetBeans IDE \u662f\u5f00\u6e90\u4e14\u514d\u8d39\u7684\u3002
 DESCR_JDeveloperApplicationType=Oracle JDeveloper \u662f\u4e00\u4e2a\u514d\u8d39\u7684\u96c6\u6210\u5f00\u53d1\u73af\u5883\uff0c\u5b83\u901a\u8fc7\u652f\u6301\u5b8c\u6574\u7684\u5f00\u53d1\u751f\u547d\u5468\u671f\uff0c\u7b80\u5316\u4e86\u57fa\u4e8e Java \u7684 SOA \u5e94\u7528\u7a0b\u5e8f\u548c\u7528\u6237\u754c\u9762\u7684\u5f00\u53d1\u3002
+DESCR_IntelliJPlatformApplicationType=IntelliJ \u5e73\u53f0\u63d0\u4f9b\u4e00\u5957\u5b8c\u6574\u7684\u7ec4\u4ef6\uff0c\u4ee5\u6784\u5efa\u667a\u80fd\u7684\u3001\u8bc6\u522b\u8bed\u8a00\u7684 IDE\u3002
+DESCR_EclipseApplicationType=Eclipse \u662f\u4e00\u4e2a\u5f00\u6e90>\u7684\u793e\u533a\uff0c\u5f00\u53d1\u5f00\u653e\u7684\u5e73\u53f0\u548c\u4ea7\u54c1\u3002
 DESCR_MavenApplicationType=Apache Maven \u662f\u4e00\u79cd\u8f6f\u4ef6\u9879\u76ee\u7ba1\u7406\u548c\u7406\u89e3\u5de5\u5177\u3002\u57fa\u4e8e\u9879\u76ee\u5bf9\u8c61\u6a21\u5757 (POM) \u6982\u5ff5\uff0cMaven \u80fd\u7ba1\u7406\u9879\u76ee\u751f\u6210\uff0c\u4ee5\u53ca\u6765\u81ea\u4e2d\u5fc3\u7247\u4fe1\u606f\u7684\u62a5\u544a\u548c\u6587\u6863\u3002
 DESCR_Ant=Apache Ant \u662f\u4e00\u79cd\u57fa\u4e8e Java \u7684\u751f\u6210\u5de5\u5177\u3002\u4ece\u7406\u8bba\u4e0a\u8bb2\uff0c\u8be5\u5de5\u5177\u6709\u4e9b\u7c7b\u4f3c\u4e8e Make\uff0c\u4f46\u6bd4 Make \u4f18\u8d8a\u3002
 DESCR_GlassFish=GlassFish \u662f\u4e00\u79cd\u7528\u4e8e Java EE \u5e73\u53f0\u7684\u5f00\u6e90\u5e94\u7528\u670d\u52a1\u5668\u3002
