VisualVM 137 localization for ja and zh_CN (contributed by masaki)
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3337 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-jmx/com-sun-tools-visualvm-jmx/com/sun/tools/visualvm/jmx/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-jmx/com-sun-tools-visualvm-jmx/com/sun/tools/visualvm/jmx/Bundle_ja.properties
@@ -45,3 +45,4 @@ LBL_Default_jmx_connection_name=\u30c7\u30d5\u30a9\u30eb\u30c8\u306e\u63a5\u7d9a
 
 LBL_Default_jmx_connection_descr=\u30ab\u30b9\u30bf\u30de\u30a4\u30ba\u53ef\u80fd\u306a JMX \u306e URL \u3068\u8a3c\u660e\u66f8
 
+LBL_Insecure_connection=SSL \u63a5\u7d9a\u3092\u4f7f\u7528\u3057\u306a\u3044(&N)
