--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jmx/com-sun-tools-visualvm-jmx/com/sun/tools/visualvm/jmx/impl/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jmx/com-sun-tools-visualvm-jmx/com/sun/tools/visualvm/jmx/impl/Bundle_zh_CN.properties
@@ -61,6 +61,10 @@ MSG_ConnectionProperties=\u8be5\u5e94\u7528\u7a0b\u5e8f\u7531 JMX \u8fde\u63a5\u
 Title_Unresolved_JMX=\u65e0\u6cd5\u89e3\u6790 JMX \u8fde\u63a5
 MSG_Unresolved_JMX=<html><b>\u6b64 JMX \u8fde\u63a5\u65e0\u6cd5\u89e3\u6790\uff1a</b><br>\u662f\u5426\u8981\u5728\u4e0b\u4e00 \u4e2a VisualVM \u4f1a\u8bdd\u65f6\u89e3\u6790\u8fd9\u4e9b\u8fde\u63a5\uff1f<br><br></html>
 
-Title_Insecure_SSL=\u5b89\u5168\u8fde\u63a5\u5931\u8d25\u3002\u8bf7\u786e\u8ba4\u662f\u5426\u4ee5\u975e\u5b89\u5168\u7684\u65b9\u5f0f\u91cd\u8bd5\uff1f
-MSG_Insecure_SSL=<html><b><br>\u65e0\u6cd5\u4ee5 SSL \u65b9\u5f0f<br>\u8fde\u63a5\u81f3 {0}\u3002</b><br>\u8bf7\u786e\u8ba4\u4e0d\u7528 SSL \u65b9\u5f0f\u5c1d\u8bd5\u8fde\u63a5\uff1f<br>\uff08\u7528\u6237\u540d\u548c\u5bc6\u7801\u5c06\u4ee5\u7eaf\u6587\u672c\u53d1\u9001\uff09<html>
+Title_Insecure_SSL=\u5b89\u5168\u8fde\u63a5\u5931\u8d25
+MSG_Insecure_SSL=<html><b><br>\u65e0\u6cd5\u4ee5 SSL \u65b9\u5f0f<br>\u8fde\u63a5\u81f3 {0}\u3002\u8bf7\u786e\u8ba4\u4e0d\u7528 SSL \u65b9\u5f0f\u5c1d\u8bd5\u8fde\u63a5\uff1f</b><br><br>\u7528\u6237\u540d\u548c\u5bc6\u7801\u5c06\u4ee5\u7eaf\u6587\u672c\u53d1\u9001<html>
 
+LBL_CredentialsMsg1=\u6b64\u8fde\u63a5\u7684\u5b89\u5168\u8bc1\u4e66\u662f\u65e0\u6548\u7684\u6216\u4e22\u5931
+LBL_CredentialsMsg2=\u8bf7\u63d0\u4f9b\u7528\u6237\u540d\u548c\u5bc6\u7801:
+
+Retry_Insecure_SSL=\u4e0d\u9700\u8981SSL\u7528\u4e8e\u6b64\u8fde\u63a5(&D)
