--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-profiler/com-sun-tools-visualvm-profiler/com/sun/tools/visualvm/profiler/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-profiler/com-sun-tools-visualvm-profiler/com/sun/tools/visualvm/profiler/Bundle_zh_CN.properties
@@ -102,3 +102,44 @@ LBL_Cpu_settings=CPU \u8bbe\u7f6e
 
 LBL_Memory_settings=\u5185\u5b58\u8bbe\u7f6e
 
+#
+BTN_ManageCalibration=\u7ba1\u7406(&M)
+CAP_SectionName=\u5206\u6790\u5668\u6821\u51c6
+HINT_RunCalibrationAction=\u7ba1\u7406\u6821\u51c6\u6570\u636e
+LBL_Calibrate=\u6821\u51c6(&C)
+LBL_JavaPlatform=Java \u5e73\u53f0
+LBL_JavaPlatforms=Java \u5e73\u53f0(&P)
+LBL_JavaPlatformsForProfiling= \u652f\u6301\u5206\u6790\u7684Java\u5e73\u53f0(&J)
+LBL_LastCalibrated=\u6700\u540e\u6821\u51c6
+LBL_ManageCalibration=\u7ba1\u7406\u6821\u51c6\u6570\u636e:
+LBL_NotCalibrated=\u672a\u6821\u51c6
+MSG_CalibrationFailed=\u6821\u51c6\u5931\u8d25\u3002\n\u8bf7\u68c0\u67e5\u60a8\u7684\u8bbe\u7f6e\uff0c\u7136\u540e\u518d\u6b21\u8fd0\u884c\u6821\u51c6\u3002
+MSG_CalibrationOnAttach=\u5206\u6790\u4f1a\u8bdd\u6b63\u5728\u8fdb\u884c\u4e2d\n\u4f60\u60f3\u4ece\u76ee\u6807\u5e94\u7528\u7a0b\u5e8f\u5206\u79bb\uff0c\u5e76\u8fdb\u884c\u6821\u51c6\uff1f
+MSG_CalibrationOnProfile=\u5206\u6790\u4f1a\u8bdd\u6b63\u5728\u8fdb\u884c\u4e2d\n\u4f60\u60f3\u505c\u6b62\u5f53\u524d\u4f1a\u8bdd\u5e76\u6267\u884c\u6821\u51c6\uff1f
+MSG_calibration=<html><br><b>\u5206\u6790\u5668\u6821\u51c6\u5c06\u88ab\u6267\u884c\u3002</b><br><br>\u5206\u6790\u5668\u5c06\u6267\u884c\u76ee\u6807Java\u5e73\u53f0\u7684\u521d\u59cb\u6821\u51c6\u3002<br>\u60a8\u53ef\u4ee5\u7ba1\u7406\u6821\u51c6\u6570\u636e \u5de5\u5177 | \u9009\u9879| \u6027\u80fd\u5206\u6790</html>
+
+MSG_Incorrect_CPU_settings=CPU\u7684\u8bbe\u7f6e\u65e0\u6548\u3002
+
+CAP_Calibrate_java=Java\u7684\u6821\u51c6
+# Please select Java 7 64bit binary:
+MSG_Calibration_required_arch=\u63a2\u67e5\u5668\u5c06\u6821\u51c6Java\u5e73\u53f0\u7528\u4e8e\u5206\u6790\u3002<br>\u8bf7\u9009\u62e9{0} {1}\u7684\u4e8c\u8fdb\u5236:
+# Please select Java 7 binary:
+MSG_Calibration_required_noarch=\u63a2\u67e5\u5668\u5c06\u6821\u51c6Java\u5e73\u53f0\u7528\u4e8e\u5206\u6790\u3002<br>\u8bf7\u9009\u62e9{0} \u7684\u4e8c\u8fdb\u5236:
+CAP_Select_java_binary=\u9009\u62e9Java\u4e8c\u8fdb\u5236
+# Selected binary is not Java 7 64bit.
+MSG_Incorrect_java_binary_arch=\u9009\u62e9\u7684\u4e8c\u8fdb\u5236\u662f\u4e0d\u662f{0}{1}\u3002
+# Selected binary is not Java 7.
+MSG_Incorrect_java_binary_noarch=\u9009\u62e9\u7684\u4e8c\u8fdb\u5236\u662f\u4e0d\u662f{0}\u3002
+# Java Binary (java.exe)
+LBL_Java_file_filter=Java\u4e8c\u8fdb\u5236 ({0})
+BTN_Browse=\u6d4f\u89c8(&B)
+BTN_Ok=\u786e\u5b9a
+
+STR_Externaly_started_app=\u4ece\u5916\u90e8\u542f\u52a8\u7684\u5e94\u7528\u7a0b\u5e8f
+# Java 7
+STR_Java_platform_name=Java {0}
+# 64bit
+STR_Java_arch_name={0}bit
+CAP_Warning=\u8b66\u544a
+# HTML-formatted
+MSG_StartedTooSoon=<html><b>\u5206\u6790\u7684\u5e94\u7528\u7a0b\u5e8f\u542f\u52a8\u5f97\u592a\u65e9\u4e86\u3002</b><br><br>\u8bf7\u7ec8\u6b62\u8be5\u5e94\u7528\u7a0b\u5e8f\uff0c\u5e76\u5173\u95ed\u6b64\u5bf9\u8bdd\u6846\u540e\u91cd\u65b0\u542f\u52a8\u3002</html>
