--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-jmx/com-sun-tools-visualvm-jmx/com/sun/tools/visualvm/jmx/impl/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-jmx/com-sun-tools-visualvm-jmx/com/sun/tools/visualvm/jmx/impl/Bundle_ja.properties
@@ -60,5 +60,10 @@ MSG_ConnectionProperties=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306f 
 Title_Unresolved_JMX=JMX\u63a5\u7d9a\u3092\u89e3\u6c7a\u3067\u304d\u307e\u305b\u3093
 MSG_Unresolved_JMX=<html><b>\u3053\u308c\u3089\u306eJMX\u63a5\u7d9a\u3092\u89e3\u6c7a\u3067\u304d\u307e\u305b\u3093:</b><br>\u6b21\u56deVisualVM\u30bb\u30c3\u30b7\u30e7\u30f3\u3067\u89e3\u6c7a\u3057\u307e\u3059\u304b?<br><br></html>
 
-Title_Insecure_SSL=\u30bb\u30ad\u30e5\u30a2\u63a5\u7d9a\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002\u30bb\u30ad\u30e5\u30a2\u63a5\u7d9a\u30aa\u30d5\u3067\u63a5\u7d9a\u3057\u307e\u3059\u304b?
-MSG_Insecure_SSL=<html><b>{0}\u3078\u306e\u63a5\u7d9a<br>\u306fSSL\u3092\u4f7f\u3063\u3066\u78ba\u7387\u51fa\u6765\u307e\u305b\u3093\u3067\u3057\u305f\u3002</b><br><br>SSL\u306a\u3057\u3067\u8a66\u307f\u307e\u3059\u304b?<br>(\u30e6\u30fc\u30b6\u30fc\u540d\u3068\u30d1\u30b9\u30ef\u30fc\u30c9\u306f\u5e73\u6587\u3067\u9001\u4fe1\u3055\u308c\u307e\u3059)<html>
+Title_Insecure_SSL=\u30bb\u30ad\u30e5\u30a2\u63a5\u7d9a\u306b\u5931\u6557\u3057\u307e\u3057\u305f
+MSG_Insecure_SSL=<html><b>{0}\u3078\u306e\u63a5\u7d9a<br>\u306fSSL\u3092\u4f7f\u3063\u3066\u78ba\u7acb\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002SSL\u306a\u3057\u3067\u8a66\u307f\u307e\u3059\u304b?</b><br><br>\u30e6\u30fc\u30b6\u30fc\u540d\u3068\u30d1\u30b9\u30ef\u30fc\u30c9\u306f\u5e73\u6587\u3067\u9001\u4fe1\u3055\u308c\u307e\u3059<html>
+
+Retry_Insecure_SSL=\u3053\u306e\u63a5\u7d9a\u306b SSL \u3092\u4f7f\u7528\u3057\u306a\u3044(&D)
+#
+LBL_CredentialsMsg1=\u3053\u306e\u63a5\u7d9a\u306e\u305f\u3081\u306e\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u8cc7\u683c\u306f\u7121\u52b9\u304b\u3042\u308b\u3044\u306f\u898b\u5f53\u305f\u308a\u307e\u305b\u3093\u3002
+LBL_CredentialsMsg2=\u30e6\u30fc\u30b6\u30fc\u540d\u3068\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u6307\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044:
