--- a/l10n/src/ja/visualvm/com-sun-tools-visualvm-profiler/com-sun-tools-visualvm-profiler/com/sun/tools/visualvm/profiler/Bundle_ja.properties
+++ b/l10n/src/ja/visualvm/com-sun-tools-visualvm-profiler/com-sun-tools-visualvm-profiler/com/sun/tools/visualvm/profiler/Bundle_ja.properties
@@ -100,4 +100,42 @@ LBL_Settings=\u8a2d\u5b9a
 LBL_Cpu_settings=CPU \u8a2d\u5b9a
 
 LBL_Memory_settings=\u30e1\u30e2\u30ea\u30fc\u8a2d\u5b9a
+#
+BTN_ManageCalibration=\u8a2d\u5b9a(&M)
+CAP_SectionName=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u8abf\u6574
+HINT_RunCalibrationAction=\u8abf\u6574\u30c7\u30fc\u30bf\u3092\u8a2d\u5b9a
+LBL_Calibrate=\u8abf\u6574(&C)
+LBL_JavaPlatform=Java \u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0
+LBL_JavaPlatforms=Java \u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0(&P)
+LBL_JavaPlatformsForProfiling=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u3092\u30b5\u30dd\u30fc\u30c8\u3059\u308b &Java \u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0:
+LBL_LastCalibrated=\u6700\u65b0\u306e\u8abf\u6574
+LBL_ManageCalibration=\u8abf\u6574\u30c7\u30fc\u30bf\u3092\u8a2d\u5b9a:
+LBL_NotCalibrated=\u8abf\u6574\u3057\u3066\u3044\u306a\u3044
+MSG_CalibrationFailed=\u8abf\u6574\u304c\u5931\u6557\u3057\u307e\u3057\u305f\u3002\n\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3092\u78ba\u8a8d\u3057\u8abf\u6574\u3092\u518d\u5ea6\u5b9f\u884c\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+MSG_CalibrationOnAttach=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u30bb\u30c3\u30b7\u30e7\u30f3\u304c\u5b9f\u884c\u4e2d\u3067\u3059\u3002\n\u5bfe\u8c61\u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u304b\u3089\u5207\u308a\u96e2\u3057\u8abf\u6574\u3092\u5b9f\u884c\u3057\u307e\u3059\u304b?
+MSG_CalibrationOnProfile=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u30bb\u30c3\u30b7\u30e7\u30f3\u304c\u5b9f\u884c\u4e2d\u3067\u3059\u3002\n\u73fe\u5728\u306e\u30bb\u30c3\u30b7\u30e7\u30f3\u3092\u505c\u6b62\u3057\u8abf\u6574\u3092\u5b9f\u884c\u3057\u307e\u3059\u304b?
+MSG_calibration=<html><br><b>\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u8abf\u6574\u3092\u5b9f\u884c\u3057\u307e\u3059\u3002</b><br><br>\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306f\u5bfe\u8c61 Java \u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0\u306e\u521d\u671f\u8abf\u6574\u3092\u884c\u3044\u307e\u3059\u3002<br>\u8abf\u6574\u30c7\u30fc\u30bf\u306f\u30c4\u30fc\u30eb | \u30aa\u30d7\u30b7\u30e7\u30f3 | \u30d7\u30ed\u30d5\u30a1\u30a4\u30ea\u30f3\u30b0\u3067\u8a2d\u5b9a\u3067\u304d\u307e\u3059\u3002</html>
+MSG_Incorrect_CPU_settings=\u63d0\u4f9b\u3055\u308c\u305f CPU \u8a2d\u5b9a\u304c\u6b63\u3057\u304f\u3042\u308a\u307e\u305b\u3093\u3002
 
+CAP_Calibrate_java=Java \u3092\u8abf\u6574
+# Please select Java 7 64bit binary:
+MSG_Calibration_required_arch=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306f Java \u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0\u3092\u8abf\u6574\u3057\u307e\u3059\u3002<br>\u30d0\u30a4\u30ca\u30ea {0} {1} \u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044:
+# Please select Java 7 binary:
+MSG_Calibration_required_noarch=\u30d7\u30ed\u30d5\u30a1\u30a4\u30e9\u306f Java \u30d7\u30e9\u30c3\u30c8\u30d5\u30a9\u30fc\u30e0\u3092\u8abf\u6574\u3057\u307e\u3059\u3002<br>\u30d0\u30a4\u30ca\u30ea {0} \u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002:
+CAP_Select_java_binary=Java \u30d0\u30a4\u30ca\u30ea\u3092\u9078\u629e
+# Selected binary is not Java 7 64bit.
+MSG_Incorrect_java_binary_arch=\u9078\u629e\u3055\u308c\u305f\u30d0\u30a4\u30ca\u30ea\u306f {0} {1} \u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
+# Selected binary is not Java 7.
+MSG_Incorrect_java_binary_noarch=\u9078\u629e\u3055\u308c\u305f\u30d0\u30a4\u30ca\u30ea\u306f {0} \u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
+# Java Binary (java.exe)
+LBL_Java_file_filter=Java \u30d0\u30a4\u30ca\u30ea ({0})
+BTN_Browse=\u30d6\u30e9\u30a6\u30ba(&B)
+BTN_Ok=\u4e86\u89e3
+
+STR_Externaly_started_app=\u5916\u90e8\u3067\u5b9f\u884c\u3055\u308c\u305f\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3
+# Java 7
+STR_Java_platform_name=Java {0}
+# 64bit
+STR_Java_arch_name={0}\u30d3\u30c3\u30c8
+# HTML-formatted
+MSG_StartedTooSoon=<html><b>\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u304c\u3082\u3046\u3059\u3050\u8d77\u52d5\u3057\u307e\u3059\u3002</b><br><br>\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u505c\u6b62\u3057\u3066<br>\u3053\u306e\u30c0\u30a4\u30a2\u30ed\u30b0\u3092\u9589\u3058\u305f\u5f8c\u3082\u3046\u4e00\u5ea6\u8d77\u52d5\u3057\u3066\u304f\u3060\u3055\u3044\u3002</html>
