--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jmx/com-sun-tools-visualvm-jmx/com/sun/tools/visualvm/jmx/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-jmx/com-sun-tools-visualvm-jmx/com/sun/tools/visualvm/jmx/Bundle_zh_CN.properties
@@ -45,3 +45,5 @@ LBL_Default_jmx_connection_name=\u7f3a\u7701\u8fde\u63a5
 
 LBL_Default_jmx_connection_descr=\u53ef\u5b9a\u5236\u7684 JMX url \u548c\u51ed\u8bc1
 
+LBL_Insecure_connection=\u4e0d\u8981\u6c42SSL\u8fde\u63a5(&N)
+
