--- a/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-charts/com-sun-tools-visualvm-charts/com/sun/tools/visualvm/charts/xy/Bundle_zh_CN.properties
+++ b/l10n/src/zh_CN/visualvm/com-sun-tools-visualvm-charts/com-sun-tools-visualvm-charts/com/sun/tools/visualvm/charts/xy/Bundle_zh_CN.properties
@@ -22,6 +22,11 @@
 # or visit www.oracle.com if you need additional information or have any
 # questions.
 
+SimpleXYChart_ZoomInString=\u653e\u5927 (\u9f20\u6807\u6eda\u8f6e)
+SimpleXYChart_ZoomOutString=\u7f29\u5c0f (\u9f20\u6807\u6eda\u8f6e)
+SimpleXYChart_FixedScaleString=\u56fa\u5b9a\u6bd4\u4f8b (\u9f20\u6807\u6eda\u8f6e\u5355\u51fb)
+SimpleXYChart_ScaleToFitString=\u9002\u5f53\u7f29\u653e (\u9f20\u6807\u6eda\u8f6e\u5355\u51fb)
+
 # HTML-formatted message format for chart details items, example: 'Item1: 123'
 SimpleXYChartUtils_DetailsItemFormat=<b>{0}\uff1a</b>{1}
 
